--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "copyright",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.js"
+    "build-dev": "webpack --config webpack.config.js",
+    "build": "NODE_ENV=production webpack -p --config webpack.config.js",
+    "clean-dev": "rm -rf ./dist"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
